--- a/DemoDynamicCollectionView/Base.lproj/Main.storyboard
+++ b/DemoDynamicCollectionView/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="g8v-Nn-l6i">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="g8v-Nn-l6i">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Entry Table View Controller-->
@@ -46,6 +46,7 @@
                         <segue destination="TFE-3s-fe5" kind="show" identifier="PinterestSegue" id="hr7-Nk-MJA"/>
                         <segue destination="Wvg-4V-qQ1" kind="show" identifier="SnapDynamicSegue" id="b73-h7-vLA"/>
                         <segue destination="MKs-ho-Kr6" kind="show" identifier="BounceMenuSegue" id="Nyq-EO-6cg"/>
+                        <segue destination="ve1-hm-5aT" kind="show" identifier="CollectionTransitionSegue" id="AoZ-c1-37a"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6H-WW-nP7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -124,7 +125,15 @@
                 <viewControllerPlaceholder storyboardName="BounceMenu" id="MKs-ho-Kr6" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jkz-dQ-A1z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1876.5" y="812"/>
+            <point key="canvasLocation" x="1876.5" y="761"/>
+        </scene>
+        <!--CollectionTransition-->
+        <scene sceneID="C2E-j9-dIo">
+            <objects>
+                <viewControllerPlaceholder storyboardName="CollectionTransition" id="ve1-hm-5aT" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1sJ-sX-dWF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1897.5" y="852"/>
         </scene>
     </scenes>
 </document>
