--- a/DemoDynamicCollectionView/Base.lproj/CollectionTransition.storyboard
+++ b/DemoDynamicCollectionView/Base.lproj/CollectionTransition.storyboard
@@ -57,6 +57,9 @@
                                                     </constraints>
                                                 </collectionViewCell>
                                             </cells>
+                                            <connections>
+                                                <outlet property="delegate" destination="nUu-HD-reT" id="QgZ-Du-LLq"/>
+                                            </connections>
                                         </collectionView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -75,6 +78,52 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ugo-wH-K5P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1001" y="219"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="xET-m8-TX7">
+            <objects>
+                <collectionViewController storyboardIdentifier="DCDetailViewController" id="l9o-nY-CS9" customClass="DCDetailViewController" customModule="DemoDynamicCollectionView" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="LMQ-6y-XDC">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pmh-66-h0F">
+                            <size key="itemSize" width="180" height="180"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorCell" id="98Z-Jb-euo">
+                                <rect key="frame" x="10" y="10" width="180" height="180"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xiQ-KR-xIZ">
+                                            <rect key="frame" x="69" y="79" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="xiQ-KR-xIZ" firstAttribute="centerX" secondItem="98Z-Jb-euo" secondAttribute="centerX" id="QiQ-oi-Cg0"/>
+                                    <constraint firstItem="xiQ-KR-xIZ" firstAttribute="centerY" secondItem="98Z-Jb-euo" secondAttribute="centerY" id="TmM-Ns-B9h"/>
+                                </constraints>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="l9o-nY-CS9" id="XTP-Ta-bua"/>
+                            <outlet property="delegate" destination="l9o-nY-CS9" id="pri-bq-sSx"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yBP-Mf-bbp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1684" y="219"/>
         </scene>
     </scenes>
 </document>
