--- a/DemoDynamicCollectionView/Base.lproj/Main.storyboard
+++ b/DemoDynamicCollectionView/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="g8v-Nn-l6i">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="g8v-Nn-l6i">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,7 +8,7 @@
         <!--Entry Table View Controller-->
         <scene sceneID="Yma-7X-15T">
             <objects>
-                <tableViewController id="km4-57-p1o" customClass="EntryTableViewController" customModule="DemoDynamicCollectionView" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="km4-57-p1o" customClass="EntryTableViewController" customModule="DemoCollectionView" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="X10-Ew-zmT">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -47,6 +47,7 @@
                         <segue destination="Wvg-4V-qQ1" kind="show" identifier="SnapDynamicSegue" id="b73-h7-vLA"/>
                         <segue destination="MKs-ho-Kr6" kind="show" identifier="BounceMenuSegue" id="Nyq-EO-6cg"/>
                         <segue destination="ve1-hm-5aT" kind="show" identifier="CollectionTransitionSegue" id="AoZ-c1-37a"/>
+                        <segue destination="cru-AH-4Oa" kind="show" identifier="CollectionAnimationsSegue" id="SlA-0C-BBU"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6H-WW-nP7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -134,6 +135,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1sJ-sX-dWF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1897.5" y="852"/>
+        </scene>
+        <!--ColletionViewAnimations-->
+        <scene sceneID="LH0-3Z-Obx">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="CollectionAnimations" storyboardName="ColletionViewAnimations" id="cru-AH-4Oa" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LOv-Qb-O5k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1910.5" y="931"/>
         </scene>
     </scenes>
 </document>
