--- a/DemoDynamicCollectionView/ColletionViewAnimations.storyboard
+++ b/DemoDynamicCollectionView/ColletionViewAnimations.storyboard
@@ -5,19 +5,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
+        <!--Simple Collection View Controller-->
         <scene sceneID="G32-jI-ClA">
             <objects>
-                <collectionViewController id="WW4-pH-Jn7" sceneMemberID="viewController">
+                <collectionViewController id="WW4-pH-Jn7" customClass="DCSimpleCollectionViewController" customModule="DemoCollectionView" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="AL3-gI-d3Z">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N9N-wF-0dZ">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
+                        <collectionViewLayout key="collectionViewLayout" id="Idf-5q-hEy" customClass="DCFlowLayoutWithAnimations" customModule="DemoCollectionView" customModuleProvider="target"/>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SimpleCell" id="Ezd-fE-Yy7">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -52,10 +47,10 @@
             </objects>
             <point key="canvasLocation" x="1177" y="586"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Simple Detail View Controller-->
         <scene sceneID="t29-RD-UfT">
             <objects>
-                <collectionViewController id="xi1-tW-cI5" sceneMemberID="viewController">
+                <collectionViewController id="xi1-tW-cI5" customClass="DCSimpleDetailViewController" customModule="DemoCollectionView" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="CvE-rO-okx">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
